@@ -1,9 +1,9 @@
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-AC_REVISION($Id: configure.in,v 5.65 2007-07-17 18:39:23 andreas_kupries Exp $)
+AC_REVISION($Id: configure.in,v 5.66 2007-08-09 20:23:17 andreas_kupries Exp $)
 
-AC_INIT([expect],[5.44.1.1])
+AC_INIT([expect],[5.44.1.2])
 
 TEA_INIT([3.5])
 
